--- a/css/buttons.css
+++ b/css/buttons.css
@@ -1,3 +1,43 @@
+/*@group basic */
 .btn {
-	
+	display: inline-block;
+	padding: 7px 16px;
+	border: 1px solid #ccc;
+	border: 1px solid rgba(0,0,0,0.15);
+	border-radius: 4px;	
+	background: #fafafa;
+	color: #222;
+	text-align: center;
+	line-height: 18px;
+	text-decoration: none;
+	cursor: pointer;
+	background: -moz-linear-gradient(top, #fff 0%, #f5f5f5 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fff), color-stop(100%,#f5f5f5));
+	background: -webkit-linear-gradient(top, #fff 0%,#f5f5f5 100%);
+	background: -o-linear-gradient(top, #fff 0%,#f5f5f5 100%); 
+	background: -ms-linear-gradient(top, #fff 0%,#f5f5f5 100%); 
+	background: linear-gradient(to bottom, #fff 0%,#f5f5f5 100%);
+
 }
+.btn:hover {
+	background: #f5f5f5;
+	border: 1px solid rgba(0,0,0,0.2);	
+	box-shadow: inset 0 1px 3px rgba(0,0,0,0.1);
+}
+.btn:active {
+	box-shadow: inset 0 3px 5px rgba(0,0,0,0.1);
+}
+/*@end basic */
+/*@group sizes */
+.btn.small {
+	padding: 3px 12px;
+	font-size: 12px;
+}
+.btn.large {
+	padding: 7px 24px;
+	font-size: 18px;
+	line-height: 36px;
+}
+/*@end sizes */
+/*@group secondary*/
+/*@end secondary*/
