--- a/css/forms.css
+++ b/css/forms.css
@@ -208,6 +208,11 @@ input.search:focus {
 	border-radius: 8px 0 0 8px;
 	border-right: none;	
 	outline: none;
+	margin-right: -4px;
+}
+input.search + .btn {
+	border-radius: 0 8px 8px 0;
+	padding: 4px 14px;
 }
 /*@end search */
 /*@group dimensions*/
