--- a/css/buttons.css
+++ b/css/buttons.css
@@ -1,7 +1,7 @@
 /*@group basic */
 .btn {
 	display: inline-block;
-	padding: 7px 16px;
+	padding: 7px 15px;
 	border: 1px solid #ccc;
 	border: 1px solid rgba(0,0,0,0.15);
 	border-radius: 4px;	
@@ -25,12 +25,12 @@
 	box-shadow: inset 0 1px 3px rgba(0,0,0,0.1);
 }
 .btn:active {
-	box-shadow: inset 0 3px 5px rgba(0,0,0,0.1);
+	box-shadow: inset 0 4px 5px rgba(0,0,0,0.1);
 }
 /*@end basic */
 /*@group sizes */
 .btn.small {
-	padding: 3px 12px;
+	padding: 4px 12px;
 	font-size: 12px;
 }
 .btn.large {
@@ -39,5 +39,50 @@
 	line-height: 36px;
 }
 /*@end sizes */
-/*@group secondary*/
-/*@end secondary*/
+/*@group primary*/
+.btn.primary {
+	border: 1px solid rgba(0,0,0,0.3);
+	background: #02a0d9;
+	background: -moz-linear-gradient(top, #02a0d9 0%, #0283b3 100%); 
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#02a0d9), color-stop(100%,#0283b3));
+	background: -webkit-linear-gradient(top, #02a0d9 0%,#0283b3 100%);
+	background: -o-linear-gradient(top, #02a0d9 0%,#0283b3 100%);
+	background: -ms-linear-gradient(top, #02a0d9 0%,#0283b3 100%);
+	background: linear-gradient(to bottom, #02a0d9 0%,#0283b3 100%);
+	color: #f7f7f7;
+}
+.btn.primary:hover {
+	background: #0283b3;
+	color: #fff;
+	box-shadow: inset 0 1px 3px rgba(0,0,0,0.2);
+}
+.btn.primary:active {
+	box-shadow: inset 0 4px 5px rgba(0,0,0,0.3);
+}
+/*@end primary*/
+/*@group primary + 3D*/
+.btn.primary.threeD {
+	padding-bottom: 8px;
+	background: #02a0d9;
+	color: #f9f9f9;
+	box-shadow: 
+		0 4px 1px #013e54, 
+		0px 8px 8px rgba(0,0,0,0.4);
+	transition: all 1s ease-in;	
+}
+.btn.primary.threeD:hover {
+	color: #fff;
+	box-shadow: 
+		0 4px 1px #013e54, 
+		0px 7px 7px rgba(0,0,0,0.4);
+}
+.btn.primary.threeD:active {
+	box-shadow: 
+		0 1px 1px #013e54, 
+		0px 3px 2px rgba(0,0,0,0.4);
+	-webkit-transform: translate(0, 1px);
+	-moz-transform: translate(0, 1px);
+	-o-transform: translate(0, 1px);
+	transform: translate(0, 1px);
+}
+/*@end primary + 3D*/
