<i> needs to be normalised

--- a/css/forms.css
+++ b/css/forms.css
@@ -158,6 +158,9 @@ input:focus + span.hint {
 
 /*@end hint*/
 /*@group prepend & apend */
+i {
+  font-style: normal; }
+
 .prepend,
 .append {
   background: #f9f9f9;
