--- a/css/forms.css
+++ b/css/forms.css
@@ -31,7 +31,8 @@ input.search {
   height: 18px;
   padding: 4px;
   margin: 3px 0;
-  width: 210px; }
+  width: 210px;
+  vertical-align: middle; }
 
 textarea {
   height: auto; }
@@ -106,6 +107,10 @@ label span {
   display: inline;
   line-height: 36px; }
 
+/* by default webkit select is a lot shorter and sits higher up */
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  .inline_form select {
+    margin-top: 9px; } }
 /*@group clear and vertical*/
 /*The explanation for the label group is full width and sitting above the labels. This is useful when the explanation is long*/
 .inline_form .input_below div,
@@ -164,7 +169,8 @@ input:focus + span.hint {
   display: inline;
   border: 1px solid #cccccc;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.1);
-  padding: 5px 8px 6px; }
+  padding: 5px 8px 6px;
+  vertical-align: middle; }
 
 .prepend {
   border-right: none;
