--- a/css/forms/pend.css
+++ b/css/forms/pend.css
@@ -5,7 +5,8 @@
   display: inline;
   border: 1px solid #cccccc;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.1);
-  padding: 5px 8px 6px; }
+  padding: 5px 8px 6px;
+  vertical-align: middle; }
 
 .prepend {
   border-right: none;
