--- a/scss/forms/pend.scss
+++ b/scss/forms/pend.scss
@@ -6,6 +6,7 @@
 	border: 1px solid #cccccc;
 	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.1);
 	padding: 5px 8px 6px;
+	vertical-align: middle;		
 }
 .prepend {
 	border-right: none;
