--- a/scss/forms/search.scss
+++ b/scss/forms/search.scss
@@ -20,6 +20,7 @@ input.search:focus {
 }
 input.search + .btn {
 	border-radius: 0 15px 15px 0;
-	padding: 4px 14px 4px 12px;
+	padding: 2px 14px 4px 12px;
+	line-height: 20px;
 }
 /*@end search */
