--- a/css/forms.css
+++ b/css/forms.css
@@ -109,7 +109,8 @@ label span {
   padding-right: 10px;
   line-height: 36px; }
 
-.inline_form label input {
+.inline_form label input,
+.inline_form label select {
   display: inline-block; }
 
 .inline_form .label_group label {
