--- a/css/forms/inline.css
+++ b/css/forms/inline.css
@@ -7,7 +7,8 @@
   padding-right: 10px;
   line-height: 36px; }
 
-.inline_form label input {
+.inline_form label input,
+.inline_form label select {
   display: inline-block; }
 
 .inline_form .label_group label {
