--- a/scss/forms/inline.scss
+++ b/scss/forms/inline.scss
@@ -11,7 +11,8 @@
 .inline_form label select {
 	display: inline-block;
 }
-.inline_form .label_group label {
+.inline_form .label_group label,
+.label_group.inline label {
 	display: inline;
 	line-height: 36px;
 }
