--- a/css/forms.css
+++ b/css/forms.css
@@ -210,29 +210,36 @@ input.appended,
 
 /*@end prepend & apend */
 /*@group search */
-input[type="search"] {
-  -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
-  box-sizing: content-box;
-  -webkit-appearance: textfield;
-  width: 160px; }
-
 input[type="search"]::-webkit-search-decoration,
 input[type="search"]::-webkit-search-cancel-button {
   -webkit-appearance: none; }
 
-input.search,
+input[type="search"],
 input.search:focus {
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  -webkit-appearance: textfield;
+  width: 160px;
+  display: inline-block;
   border-radius: 15px 0 0 15px;
   border-right: none;
   outline: none;
-  margin-right: -4px;
-  padding-left: 10px; }
+  padding-left: 10px;
+  margin: 0 -4px 0 3px; }
 
-input.search + .btn {
+input.search + button[type="submit"] {
+  display: inline-block;
+  padding: 0 14px 0 12px;
+  height: 28px;
+  vertical-align: middle;
+  border: 1px solid #ccc;
+  background: #fafafa;
   border-radius: 0 15px 15px 0;
-  padding: 2px 14px 4px 12px;
-  line-height: 20px; }
+  cursor: pointer; }
+
+input.search + button[type="submit"]:hover {
+  background: #f5f5f5; }
 
 /*@end search */
 /*@group errors */
