--- a/css/forms/search.css
+++ b/css/forms/search.css
@@ -4,7 +4,7 @@ input[type="search"]::-webkit-search-cancel-button {
   -webkit-appearance: none; }
 
 input[type="search"],
-input.search:focus {
+input[type="search"]:focus {
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
@@ -17,7 +17,7 @@ input.search:focus {
   padding-left: 10px;
   margin: 0 -4px 0 3px; }
 
-input.search + button[type="submit"] {
+input[type="search"] + button[type="submit"] {
   display: inline-block;
   padding: 0 14px 0 12px;
   height: 28px;
