--- a/css/forms/basic.css
+++ b/css/forms/basic.css
@@ -29,7 +29,7 @@ input[type="text"],
 input[type="password"],
 input[type="email"],
 input[type="number"],
-input.search {
+input[type="search"] {
   display: inherit;
   height: 18px;
   padding: 4px;
@@ -50,7 +50,7 @@ input[type="text"],
 input[type="password"],
 input[type="email"],
 input[type="number"],
-input.search,
+input[type="search"],
 select[multiple],
 select[size] {
   background-color: #ffffff;
@@ -64,7 +64,7 @@ input[type="text"]:focus,
 input[type="password"]:focus,
 input[type="email"]:focus,
 input[type="number"]:focus,
-input.search:focus {
+input[type="search"]:focus {
   border-color: #a9a9a9;
   outline: 0;
   box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.2); }
