--- a/css/type.css
+++ b/css/type.css
@@ -1,58 +1,40 @@
 * {
-	margin: 0;
-}
+  margin: 0; }
+
 html, body {
-	color: #444;
-	font: 13px/18px Arial, Helvetica, Geneva, sans-serif;
-}
-.container.content {
-	margin-top: 20px;
-}
-hr {
-	margin: 30px 0;
-	border: none;
-	height: 1px;
-	color: #eee;
-	background: #ccc;
-}
+  color: #444444;
+  font: 13px/18px Arial, Helvetica, Geneva, sans-serif; }
+
 a {
-	color: #0199d2;	
-}
-h1,h2,h3,h4,h5,h6 {
-	color: #494949;
-}
+  color: #0199d2; }
+
+h1, h2, h3, h4, h5, h6 {
+  color: #4e4e4e; }
+
 h1 {
-	font-size: 48px;
-	line-height: 72px;
-}
+  font-size: 48px;
+  line-height: 72px; }
 
 h2 {
-	font-size: 36px;
-	line-height: 54px;
-}
+  font-size: 36px;
+  line-height: 54px; }
 
 h3 {
-	font-size: 24px;
-	line-height: 36px;
-}
+  font-size: 24px;
+  line-height: 36px; }
 
 h4 {
-	font-size: 21px;
-	line-height: 36px;
-}
+  font-size: 21px;
+  line-height: 36px; }
 
 h5 {
-	font-size: 18px;
-}
+  font-size: 18px; }
 
 h6 {
-	font-size: 16px;
-}
+  font-size: 16px; }
 
 p {
-	margin-bottom: 18px;
-}
+  margin-bottom: 18px; }
 
 ol, ul {
-	margin: 0 0 18px 24px;
-}
+  margin: 0 0 18px 24px; }
