--- a/scss/forms/basic.scss
+++ b/scss/forms/basic.scss
@@ -1,6 +1,7 @@
+@import "../variables";
 /*@group basic*/
 form {
-	margin-bottom: 20px;
+	margin-bottom: $line-height;
 }
 label,
 .label_group {
@@ -10,9 +11,9 @@ label,
 	overflow: hidden;
 }
 .label_group label {
-	margin-bottom: 5px;
-	padding: 0;
-	color: #777;
+	margin-bottom: 3px;
+	padding: 2px 0 0 0;
+	color: $grey;
 }
 .label_group label:first-of-type {
 	margin-top: 3px;
@@ -20,6 +21,7 @@ label,
 input[type="radio"],
 input[type="checkbox"] {
 	margin: 0 5px;
+	vertical-align: text-top;
 }
 select,
 select[multiple],
@@ -31,7 +33,7 @@ input[type="email"],
 input[type="number"],
 input[type="search"] {
 	display: inherit;
-	height: 18px;
+	height: $line-height;
 	padding: 4px;
 	margin: 3px 0;
 	width: 210px;
@@ -53,9 +55,9 @@ input[type="number"],
 input[type="search"],
 select[multiple],
 select[size] {
-	background-color: #ffffff;
-	border: 1px solid #ccc;
-	border-radius: 3px;
+	background-color: #fff;
+	border: 1px solid $lighter-grey;
+	border-radius: $radius;
 	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.1);
 	transition: all linear 0.2s;
 }
@@ -88,21 +90,17 @@ select[multiple],
 select[size] {
   height: auto;
 }
-input[type="radio"],
-input[type="checkbox"] {
-	vertical-align: text-top;
-}
 input:-moz-placeholder {
-  color: #999999;
+  color: $light-grey;
 }
 :-ms-input-placeholder {
-  color: #999999;
+  color: $light-grey;
 }
 ::-webkit-input-placeholder {
-  color: #999999;
+  color: $light-grey;
 }
 label span {
-	color: #999;
+	color: $light-grey;
 	font-size: 12px;
 }
 /*@end basic */
