--- a/scss/forms/dimensions.scss
+++ b/scss/forms/dimensions.scss
@@ -1,28 +1,30 @@
+@import "../variables";
+
 /*@group dimensions*/
 /*@group specific*/
 label .span1 {
-	width: 16px;
+	width: $form-base-width;
 }
 label .span2 {
-	width: 32px;
+	width: $form-base-width*2;
 }
 label .span3 {
-	width: 48px;
+	width: $form-base-width*3;
 }
 label .span4 {
-	width: 64px;
+	width: $form-base-width*4;
 }
 label .span5 {
-	width: 80px;
+	width: $form-base-width*5;
 }
 label .span6 {
-	width: 96px;
+	width: $form-base-width*6;
 }
 label .span7 {
-	width: 112px;
+	width: $form-base-width*7;
 }
 label .span8 {
-	width: 128px;
+	width: $form-base-width*8;
 }
 /*@end specific*/
 /*@group simple */
