neutralise the <i> because it's used in *pend

--- a/scss/forms/basic.scss
+++ b/scss/forms/basic.scss
@@ -1,5 +1,8 @@
 @import "../variables";
 /*@group basic*/
+i {
+	font-style: normal; /*used for *pend*/
+}
 form {
 	margin-bottom: $line-height;
 }
