--- a/css/buttons.css
+++ b/css/buttons.css
@@ -1,84 +1,77 @@
 /*@group basic */
 .btn {
-	display: inline-block;
-	padding: 8px 16px;
-	border: 1px solid #ccc;
-	border: 1px solid rgba(0,0,0,0.15);
-	border-radius: 4px;	
-	background: #fafafa;
-	color: #222;
-	text-align: center;
-	line-height: 18px;
-	text-decoration: none;
-	cursor: pointer;
-	background: -moz-linear-gradient(top, #fff 0%, #f5f5f5 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fff), color-stop(100%,#f5f5f5));
-	background: -webkit-linear-gradient(top, #fff 0%,#f5f5f5 100%);
-	background: -o-linear-gradient(top, #fff 0%,#f5f5f5 100%); 
-	background: -ms-linear-gradient(top, #fff 0%,#f5f5f5 100%); 
-	background: linear-gradient(to bottom, #fff 0%,#f5f5f5 100%);
+  display: inline-block;
+  padding: 8px 16px;
+  border: 1px solid #ccc;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  background: #fafafa;
+  color: #222;
+  text-align: center;
+  line-height: 18px;
+  text-decoration: none;
+  cursor: pointer;
+  background: -moz-linear-gradient(top, white 0%, #f5f5f5 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, white), color-stop(100%, #f5f5f5));
+  background: -webkit-linear-gradient(top, white 0%, #f5f5f5 100%);
+  background: -o-linear-gradient(top, white 0%, #f5f5f5 100%);
+  background: -ms-linear-gradient(top, white 0%, #f5f5f5 100%);
+  background: linear-gradient(to bottom, white 0%, #f5f5f5 100%); }
 
-}
 .btn:hover {
-	background: #f5f5f5;
-	border: 1px solid rgba(0,0,0,0.2);	
-	box-shadow: inset 0 1px 3px rgba(0,0,0,0.1);
-}
+  background: #f5f5f5;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1); }
+
 .btn:active {
-	box-shadow: inset 0 4px 5px rgba(0,0,0,0.1);
-}
+  box-shadow: inset 0 4px 5px rgba(0, 0, 0, 0.1); }
+
 /*@end basic */
 /*@group sizes */
 .btn.small {
-	padding: 6px 12px;
-	font-size: 11px;
-}
+  padding: 6px 12px;
+  font-size: 11px; }
+
 .btn.large {
-	padding: 7px 26px;
-	font-size: 18px;
-	line-height: 36px;
-}
+  padding: 7px 26px;
+  font-size: 18px;
+  line-height: 36px; }
+
 /*@end sizes */
 /*@group primary*/
 .btn.primary {
-	border: 1px solid rgba(0,0,0,0.3);
-	background: #02a0d9;
-	background: -moz-linear-gradient(top, #02a0d9 0%, #0283b3 100%); 
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#02a0d9), color-stop(100%,#0283b3));
-	background: -webkit-linear-gradient(top, #02a0d9 0%,#0283b3 100%);
-	background: -o-linear-gradient(top, #02a0d9 0%,#0283b3 100%);
-	background: -ms-linear-gradient(top, #02a0d9 0%,#0283b3 100%);
-	background: linear-gradient(to bottom, #02a0d9 0%,#0283b3 100%);
-	color: #f7f7f7;
-}
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  background: #02a0d9;
+  background: -moz-linear-gradient(top, #02a0d9 0%, #0283b3 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #02a0d9), color-stop(100%, #0283b3));
+  background: -webkit-linear-gradient(top, #02a0d9 0%, #0283b3 100%);
+  background: -o-linear-gradient(top, #02a0d9 0%, #0283b3 100%);
+  background: -ms-linear-gradient(top, #02a0d9 0%, #0283b3 100%);
+  background: linear-gradient(to bottom, #02a0d9 0%, #0283b3 100%);
+  color: #f7f7f7; }
+
 .btn.primary:hover {
-	background: #0283b3;
-	color: #fff;
-	box-shadow: inset 0 1px 3px rgba(0,0,0,0.2);
-}
+  background: #0283b3;
+  color: #fff;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2); }
+
 .btn.primary:active {
-	box-shadow: inset 0 4px 5px rgba(0,0,0,0.3);
-}
+  box-shadow: inset 0 4px 5px rgba(0, 0, 0, 0.3); }
+
 /*@end primary*/
 /*@group primary + 3D*/
 .btn.primary.threeD {
-	background: #02a0d9;
-	box-shadow: 
-		0 4px 1px #013e54, 
-		0px 8px 8px rgba(0,0,0,0.4);
-}
+  background: #02a0d9;
+  box-shadow: 0 4px 1px #013e54, 0px 8px 8px rgba(0, 0, 0, 0.4); }
+
 .btn.primary.threeD:hover {
-	box-shadow: 
-		0 4px 1px #013e54, 
-		0px 7px 7px rgba(0,0,0,0.4);
-}
+  box-shadow: 0 4px 1px #013e54, 0px 7px 7px rgba(0, 0, 0, 0.4); }
+
 .btn.primary.threeD:active {
-	box-shadow: 
-		0 1px 1px #013e54, 
-		0px 3px 2px rgba(0,0,0,0.4);
-	-webkit-transform: translate(0, 1px);
-	-moz-transform: translate(0, 1px);
-	-o-transform: translate(0, 1px);
-	transform: translate(0, 1px);
-}
+  box-shadow: 0 1px 1px #013e54, 0px 3px 2px rgba(0, 0, 0, 0.4);
+  -webkit-transform: translate(0, 1px);
+  -moz-transform: translate(0, 1px);
+  -o-transform: translate(0, 1px);
+  transform: translate(0, 1px); }
+
 /*@end primary + 3D*/
