--- a/scss/forms/basic.scss
+++ b/scss/forms/basic.scss
@@ -1,4 +1,3 @@
-@import "../variables";
 /*@group basic*/
 i {
 	font-style: normal; /*used for *pend*/
@@ -7,18 +6,18 @@ form {
 	margin-bottom: $line-height;
 }
 label,
-.label_group {
+.label-group {
 	display: block;
 	margin-bottom: 10px;
 	padding: 5px;
 	overflow: hidden;
 }
-.label_group label {
+.label-group label {
 	margin-bottom: 3px;
 	padding: 2px 0 0 0;
 	color: $grey;
 }
-.label_group label:first-of-type {
+.label-group label:first-of-type {
 	margin-top: 3px;
 }
 input[type="radio"],
@@ -40,7 +39,7 @@ input[type="search"] {
 	padding: 4px;
 	margin: 3px 0;
 	width: 210px;
-	vertical-align: middle;	
+	vertical-align: middle;
 }
 textarea {
 	height: auto;
