--- a/scss/forms/hint.scss
+++ b/scss/forms/hint.scss
@@ -1,16 +1,16 @@
 /*@group hint*/
 label span.hint {
+	position: absolute;
 	-webkit-transition: all 0.2s ease-in;
 	-moz-transition: all 0.2s ease-in;
 	transition: all 0.2s ease-in;
 	opacity: 0;
-	position: absolute;
-}
-label.error span.hint {
-	opacity: 1;
 }
 label.error span.hint/*make sure error messages are always visible*/,
 input:focus + span.hint {
 	opacity: 1;
+}
+.form-horizontal label span.hint {
+	line-height: 34px;
 }
 /*@end hint*/
