--- a/scss/mosto_forms.scss
+++ b/scss/mosto_forms.scss
@@ -1,6 +1,9 @@
+//import the files from the Mosto framework
+//replace the variables.scss with your own
+
 // FSK forms
 // =============
-@import "variables.scss";
+@import "fw_variables.scss";
 
 // all forms need this to work
 @import "basic.scss";
