--- a/css/forms.css
+++ b/css/forms.css
@@ -140,10 +140,9 @@ label .message {
 .form-horizontal label > div,
 .form-horizontal .label-group > div {
   width: 130px;
-  float: left;
   text-align: right;
-  padding-right: 10px;
-  line-height: 34px;
+  padding-right: 3px;
+  display: inline-block;
 }
 
 .form-horizontal label input,
@@ -215,6 +214,7 @@ input:focus + .message.hint {
 
 .form-horizontal label .message.hint {
   line-height: 34px;
+  margin-left: 5px;
 }
 
 /*@end hint*/
@@ -222,12 +222,15 @@ input:focus + .message.hint {
 .prepend,
 .append {
   background: #f9f9f9;
-  display: inline;
+  display: inline-block;
   border: 1px solid #cccccc;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.1);
-  padding: 5px 8px 6px;
-  *padding-bottom: 4px;
+  vertical-align: top;
+  height: 18px;
+  padding: 4px 8px;
+  margin: 3px 0;
   vertical-align: middle;
+  line-height: 20px;
 }
 
 .prepend {
