--- a/css/forms.css
+++ b/css/forms.css
@@ -11,19 +11,13 @@ form {
 label,
 .label-group {
   display: block;
-  margin-bottom: 10px;
-  padding: 5px;
+  margin-bottom: 18px;
   overflow: hidden;
 }
 
 .label-group label {
-  margin-bottom: 3px;
-  padding: 2px 0 0 0;
+  margin-bottom: 9px;
   color: #777777;
-}
-
-.label-group label:first-of-type {
-  margin-top: 3px;
 }
 
 input[type="radio"],
@@ -129,6 +123,7 @@ input:-moz-placeholder {
 label .message {
   color: #999999;
   font-size: 12px;
+  vertical-align: middle;
 }
 
 .help-inline label input {
@@ -143,6 +138,7 @@ label .message {
   text-align: right;
   padding-right: 3px;
   display: inline-block;
+  vertical-align: middle;
 }
 
 .form-horizontal label input,
@@ -166,6 +162,7 @@ label .message {
 .form-horizontal .stacked div {
   width: 100%;
   text-align: left;
+  margin-bottom: 3px;
 }
 
 .form-horizontal .input-below label,
@@ -263,13 +260,13 @@ input.appended,
 
 /*@end prepend & apend */
 /*@group search */
-input[type="search"]::-webkit-search-decoration,
-input[type="search"]::-webkit-search-cancel-button {
+input.search-input::-webkit-search-decoration,
+input.search-input::-webkit-search-cancel-button {
   -webkit-appearance: none;
 }
 
-input[type="search"],
-input[type="search"]:focus {
+input.search-input,
+input.search-input:focus {
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
@@ -283,7 +280,7 @@ input[type="search"]:focus {
   margin: 0 -4px 0 3px;
 }
 
-input[type="search"] + button[type="submit"] {
+input.search-input + .search-submit {
   display: inline-block;
   padding: 0 14px 0 12px;
   height: 28px;
@@ -294,7 +291,7 @@ input[type="search"] + button[type="submit"] {
   cursor: pointer;
 }
 
-input.search + button[type="submit"]:hover {
+.search-input + .search-submit:hover {
   background: #f5f5f5;
 }
 
@@ -350,6 +347,22 @@ label .span7 {
 
 label .span8 {
   width: 128px;
+}
+
+label .span9 {
+  width: 144px;
+}
+
+label .span10 {
+  width: 160px;
+}
+
+label .span11 {
+  width: 176px;
+}
+
+label .span12 {
+  width: 192px;
 }
 
 /*@end specific*/
