--- a/css/forms.css
+++ b/css/forms.css
@@ -384,4 +384,9 @@ label .xl {
 }
 
 /*@end simple */
+label [class*="span"] {
+  float: none;
+  /*stops the bootstrap grid breaking the forms*/
+}
+
 /*@end dimensions*/
