support for <textarea> in horizontal forms

--- a/css/forms.css
+++ b/css/forms.css
@@ -142,7 +142,8 @@ label .message {
 }
 
 .form-horizontal label input,
-.form-horizontal label select {
+.form-horizontal label select,
+.form-horizontal label textarea {
   display: inline-block;
 }
 
