--- a/scss/forms/inline.scss
+++ b/scss/forms/inline.scss
@@ -8,7 +8,8 @@
 	vertical-align: middle;
 }
 .form-horizontal label input,
-.form-horizontal label select {
+.form-horizontal label select,
+.form-horizontal label textarea {
 	display: inline-block;
 }
 .form-horizontal .label-group label,
